@@ -1,10 +1,0 @@
-<ivy-module version="2.0">
-  <info organisation="cukes.info" module="groovy-example"/>
-  <dependencies>
-    <dependency org="cuke4duke" name="cuke4duke" rev="0.1.8-SNAPSHOT"/>
-    <dependency org="org.jruby" name="jruby-complete" rev="1.4.0RC1" transitive="false"/>
-    <dependency org="org.picocontainer" name="picocontainer" rev="2.8.3"/>
-    <dependency org="junit" name="junit" rev="4.7"/>
-    <dependency org="org.codehaus.groovy" name="groovy-all" rev="1.6.4"/>
-  </dependencies>
-</ivy-module>
