@@ -52,11 +52,17 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-  		<groupId>org.seleniumhq.webdriver</groupId>
-  		<artifactId>webdriver-firefox</artifactId>
-  		<version>0.9.7376</version>
+      <groupId>org.seleniumhq.webdriver</groupId>
+      <artifactId>webdriver-htmlunit</artifactId>
+      <version>0.9.7376</version>
       <scope>test</scope>
     </dependency>
+    <!-- <dependency>
+      <groupId>org.seleniumhq.webdriver</groupId>
+      <artifactId>webdriver-firefox</artifactId>
+      <version>0.9.7376</version>
+      <scope>test</scope>
+    </dependency> -->
   </dependencies>
 
   <build>
